--- a/css/ruang-admin.css
+++ b/css/ruang-admin.css
@@ -895,6 +895,10 @@ a:focus {
 .login-form {
   padding: 3rem !important
 }
+.imagen{
+  width: 30px;
+  height: 30px;
+}
 
 @media (max-width:768px) {
   #container-wrapper {
